# fractal-tasks-core

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  LICENSE  README.md  channels.py  data.json  doc-requirements.txt  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  testing_seg.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  ci.yml  ci_core.yml  ci_pip.yml  ci_pixi.yml  ci_poetry.yml  ci_tasks.yml  documentation.yaml  download_zenodo_data.yml  manifest_building.yml  manifest_diff_from_main.yml  manifest_external_packages.yml  package.yml  pip_install.yml  poetry_build.yml  poetry_update.yml  publish_pypi.yml  zizmor.yaml
_tasks/: generate_task_list.py
_tasks/_all/: index.html
all_tasks/: index.html
changelog/: index.html
custom_task/: index.html
custom_tasks_old/: index.html
development/: index.html
docs/: .gitignore  README  README.md  all_tasks.md  changelog.md  contribute.md  custom_task.md  custom_tasks_old.md  development.md  doc-requirements.txt  gen_ref_pages.py  how_to_install.md  index.md  install.md  manifest.md  py_scripts.md  requirements.txt  roi_tables.md  tables.md  task_manifest.md  tasks_in_fractal.md  tasks_in_scripts.md
docs/_tasks/: .gitignore  _all.md  generate_list.py  generate_task_list.py
docs/fractal_tasks_core/: index.md
docs/reference/: SUMMARY.md
docs/run_tasks/: index.md  tasks_in_fractal.md  tasks_in_scripts.md
docs/source/: api.rst  changelog.rst  conf.py  development.rst  index.rst  install_howto.rst  intro.rst  manifest.rst  run_in_python.rst  task_howto.rst  usage.rst
docs/version_updates/: index.md  v0_14_0.md
examples/: .gitignore  README.md
examples/01_cardio_tiny_dataset/: README.md  run_workflow.py  run_workflow_partial_channel_inputs.py
fractal_tasks_core/: .gitignore  TEMPORARY_validate_manifest.py  __FRACTAL_MANIFEST__.json  __args__cellpose_segmentation__.json  __args__create_ome_zarr__.json  __args__create_ome_zarr_multiplex__.json  __init__.py  _illumination_correction_utils.py  _io_models.py  _measure_features_utils.py  _plate_utils.py  _projection_utils.py  _registration_utils.py  _threshold_segmentation_task_utils.py  _threshold_segmentation_utils.py  _utils.py  apply_registration_to_image.py  backup_cellpose_segmentation.py  calculate_registration_image_based.py  cellpose_secondary_segmentation.py  cellpose_segmentation.py  channels.py  compress_tif.py  compute_image_based_registration.py  compute_projection_hcs.py  compute_registration_consensus.py  copy_ome_zarr.py  copy_ome_zarr_hcs_plate.py  create_ome_zarr.py  create_ome_zarr_multiplex.py  create_zarr_structure.py  create_zarr_structure_multiplex.py  dummy.py  dummy_fail.py  find_registration_consensus.py  illumination_correction.py  image_based_registration_hcs_init.py  image_labeling.py  image_labeling_whole_well.py  import_ome_zarr.py  (+48 more)
htmlcov/: class_index.html  d_02c373974d9ed707__input_models_py.html  d_02c373974d9ed707__registration_utils_py.html  d_02c373974d9ed707__utils_py.html  d_02c373974d9ed707__zarr_utils_py.html  d_02c373974d9ed707_apply_registration_to_ROI_tables_py.html  d_02c373974d9ed707_apply_registration_to_image_py.html  d_02c373974d9ed707_calculate_registration_image_based_py.html  d_02c373974d9ed707_cellpose_segmentation_py.html  d_02c373974d9ed707_cellpose_transforms_py.html  d_02c373974d9ed707_cellvoyager_to_ome_zarr_compute_py.html  d_02c373974d9ed707_cellvoyager_to_ome_zarr_init_multiplex_py.html  d_02c373974d9ed707_cellvoyager_to_ome_zarr_init_py.html  d_02c373974d9ed707_compress_tif_py.html  d_02c373974d9ed707_copy_ome_zarr_hcs_plate_py.html  d_02c373974d9ed707_copy_ome_zarr_py.html  d_02c373974d9ed707_create_ome_zarr_multiplex_py.html  d_02c373974d9ed707_create_ome_zarr_py.html  d_02c373974d9ed707_find_registration_consensus_py.html  d_02c373974d9ed707_illumination_correction_py.html  d_02c373974d9ed707_image_based_registration_hcs_init_py.html  d_02c373974d9ed707_import_ome_zarr_py.html  d_02c373974d9ed707_init_group_by_well_for_multiplexing_py.html  d_02c373974d9ed707_io_models_py.html  d_02c373974d9ed707_maximum_intensity_projection_py.html  d_02c373974d9ed707_napari_workflows_wrapper_models_py.html  d_02c373974d9ed707_napari_workflows_wrapper_py.html  d_02c373974d9ed707_yokogawa_to_ome_zarr_py.html  d_27e1f490a09ee53d___init___py.html  d_27e1f490a09ee53d__overlaps_common_py.html  d_27e1f490a09ee53d_load_region_py.html  d_27e1f490a09ee53d_v1_checks_py.html  d_27e1f490a09ee53d_v1_overlaps_py.html  d_27e1f490a09ee53d_v1_py.html  d_400a8ce8eafdcbfa___init___py.html  d_400a8ce8eafdcbfa_v1_py.html  d_5848681a476c55f7___init___py.html  d_5848681a476c55f7_specs_py.html  d_5848681a476c55f7_zarr_utils_py.html  d_6f78e0182c808953_filenames_py.html  (+113 more)
install/: index.html
run_tasks/: index.html
scripts/: update_args_schemas.py  update_changelog.sh
search/: search_index.json
tables/: index.html
tests/: .gitignore  _validation.py  _zenodo_ome_zarrs.py  conftest.py  fetch_test_data_from_zenodo.sh  lib_empty_ROI_table.py  provisional_argument_match.py  test_dask_zarr.py  test_import.py  test_napari_workflows.py  test_ngff_schema.py  test_unit_ROI_indices.py  test_unit_ROIs.py  test_unit_cellpose_segmentation.py  test_unit_cellvoyager_well_names.py  test_unit_channels.py  test_unit_channels_addressing.py  test_unit_compression.py  test_unit_dummy.py  test_unit_glob_function.py  test_unit_illumination_correction.py  test_unit_image_labeling.py  test_unit_input_models.py  test_unit_lib_descriptions.py  test_unit_masked_loading.py  test_unit_napari_workflows_import.py  test_unit_napari_workflows_wrapper.py  test_unit_ngff.py  test_unit_parse_metadata_from_filename.py  test_unit_parse_yokogawa_metadata.py  test_unit_pyramid_creation.py  test_unit_read_fractal_metadata.py  test_unit_tables.py  test_unit_task.py  test_unit_upscale_array.py  test_unit_write.py  test_unit_yokogawa_to_zarr.py  test_unit_zarr.py  test_unit_zattrs_utils.py  test_valid_args_schemas.py  (+11 more)
tests/data/: .gitignore  (+4 more)
version_updates/: index.html
(+463 files in other folders)
