[project]
name = "fractal-tasks-core"
version = "1.6.0"
description = "Reference task package for the Fractal analytics platform"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Lorenzo Cerrone", email = "lorenzo.cerrone@uzh.ch" },
    { name = "Joel Lüthi", email = "joel.luethi@uzh.ch" },
    { name = "Tommaso Comparin", email = "tommaso.comparin@exact-lab.it" },
]
dependencies = [
    "numpy>=2.0.0",
    "dask>=2023.1.0,<2025.11.0",
    "pydantic>2.11.0,<=2.12.0",
    "ngio>=0.5.5,<0.6.0",
    "fractal-task-tools==0.3.0",
    "scikit-image>=0.19",
    "image_registration>=0.2.9",
]

[project.optional-dependencies]
dev = [
    "devtools==0.12.0",
    "pre-commit>=2.19.0",
    "pytest>=7.1.2",
    "bumpver>=2022.1118",
    "coverage[toml]>=7.6,<7.7",
    "jsonschema>=4.16.0",
    "ruff>=0.11.0",
    "requests>=2.28.0",
    "pooch==1.8.0",
    "mypy",
    "pytest-cov",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.1",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-section-index==0.3.10",
    "mkdocstrings[python]>=1.0.2,<1.1.0",
    "mkdocs-include-markdown-plugin==7.2.1",
]

[project.urls]
Homepage = "https://github.com/fractal-analytics-platform/fractal-tasks-core"
Repository = "https://github.com/fractal-analytics-platform/fractal-tasks-core"
Documentation = "https://fractal-analytics-platform.github.io/fractal-tasks-core"
Changelog = "https://github.com/fractal-analytics-platform/fractal-tasks-core/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
fractal-tasks-core = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pytest.ini_options]
addopts = [
    "--cov=fractal_tasks_core",
    "--cov-report=term-missing",
    "--cov-branch",
]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = ["fractal_tasks_core"]
omit = ["tests/*", "examples/*", "fractal_tasks_core/dev/*", "*/.venv/*"]

[tool.coverage.report]
omit = ["tests/*", "examples/*", "fractal_tasks_core/dev/*", "*/.venv/*"]

[tool.bumpver]
current_version = "1.6.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"$']
"fractal_tasks_core/__init__.py" = ['__VERSION__ = "{version}"$']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.deptry]
exclude = ['tests', 'examples', 'docs']
