[project]
name = "fractal-tasks-core"
dynamic = ["version"]
description = "Reference task package for the Fractal analytics platform"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Lorenzo Cerrone", email = "lorenzo.cerrone@uzh.ch" },
    { name = "Joel Lüthi", email = "joel.luethi@uzh.ch" },
    { name = "Tommaso Comparin", email = "tommaso.comparin@exact-lab.it" },
]
dependencies = [
    "numpy>=2.0.0",
    "dask>=2023.1.0,<2025.11.0",
    "pydantic>2.11.0,<=2.12.0",
    "ngio>=0.5.8,<0.6.0",
    "fractal-tasks-utils>=0.1.3,<0.2.0",
    "fractal-task-tools>=0.4.0,<0.5.0",
    "scikit-image>=0.19",
    "image_registration>=0.2.9",
]

[project.optional-dependencies]
dev = [
    "devtools==0.12.0",
    "pre-commit>=2.19.0",
    "pytest>=7.1.2",
    "commitizen>=4.0",
    "coverage[toml]>=7.6,<7.7",
    "jsonschema>=4.16.0",
    "ruff>=0.11.0",
    "requests>=2.28.0",
    "pooch==1.8.0",
    "ty",
    "pytest-cov",
    "notebook",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.1",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-section-index==0.3.10",
    "mkdocstrings[python]>=1.0.2,<1.1.0",
    "mkdocs-include-markdown-plugin==7.2.1",
]

[project.urls]
Homepage = "https://github.com/fractal-analytics-platform/fractal-tasks-core"
Repository = "https://github.com/fractal-analytics-platform/fractal-tasks-core"
Documentation = "https://fractal-analytics-platform.github.io/fractal-tasks-core"
Changelog = "https://github.com/fractal-analytics-platform/fractal-tasks-core/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
fractal-tasks-core = { path = ".", editable = true }
# fractal-tasks-utils = { path = "../fractal-tasks-utils", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
commitizen = ">=4.0"

[tool.pixi.feature.dev.tasks]
bump-patch = "cz bump --increment PATCH"
bump-minor = "cz bump --increment MINOR"
bump-major = "cz bump --increment MAJOR"
bump-alpha = "cz bump --prerelease alpha"
bump-beta = "cz bump --prerelease beta"
pre-commit = "pre-commit run --all-files; git add -u"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pytest.ini_options]
addopts = [
    "--cov=fractal_tasks_core",
    "--cov-report=term-missing",
    "--cov-branch",
]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = ["fractal_tasks_core"]
omit = ["tests/*", "fractal_tasks_core/dev/*", ".pixi/*"]

[tool.coverage.report]
omit = ["tests/*", "fractal_tasks_core/dev/*", ".pixi/*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
    "B008", # Do not perform function call in argument defaults (Pydantic Field)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
unresolved-import = "warn"

[tool.typos.default.extend-words]
# Acronyms
OME = "OME"
Ome = "Ome"
ome = "ome"
FO = "FO"
# Surname
Comparin = "Comparin"

[tool.typos.files]
extend-exclude = ["CHANGELOG.md"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true

[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    ".github/**/*",
    "docs/**/*",
    "pixi.lock",
    "mkdocs.yml",
    "CHANGELOG.md",
    "tests/**/*",
]
